# InfraAI

./: README.md  pyproject.toml
infra/: config.py  main.py
src/infra/: cli.py
tests/: test_config.py
