[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infraai/infra"]

[project]
name = "infraai"
version = "0.1.0"
authors = [
  { name="Sumant Sogikar", email="sumant1122@gmail.com" },
]
description = "AI assistant that makes it easy for infrastructure developers to find commands quickly and effectively."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["distro","configparser","google.generativeai","rich"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/sumant1122/InfraAI"
Issues = "https://github.com/sumant1122/InfraAI/issues" 


[project.scripts]
infra = "infra.main:main"